# RGBD_floor_remover

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/floor_removal_rgbd/: hole_detector.hpp  pallet_detection.hpp  pallet_detector.hpp  plane_remover.hpp  server_node.hpp  stringer_detector.hpp
launch/: floor_removal.launch.py
rviz/: set.rviz
src/: hole_detector.cpp  pallet_detection.cpp  pallet_detector.cpp  plane_remover.cpp  server_node.cpp  stringer_detector.cpp
